--- a/.github/workflows/pull_latest_lexicons.yml
+++ b/.github/workflows/pull_latest_lexicons.yml
@@ -43,9 +43,9 @@ jobs:
       - name: Build
         run: |
           cd packages/atproto
-          dart run build_runner build
+          dart run build_runner build --delete-conflicting-outputs
           cd ../bluesky
-          dart run build_runner build
+          dart run build_runner build --delete-conflicting-outputs
           cd ../../
 
       - name: Format
