--- a/.github/workflows/pull_latest_mod_resources.yml
+++ b/.github/workflows/pull_latest_mod_resources.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Build
         run: |
           cd packages/bluesky
-          dart run build_runner build
+          dart run build_runner build --delete-conflicting-outputs
           cd ../../
 
       - name: Format
