--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -52,7 +52,10 @@ jobs:
         run: flutter pub get
 
       - name: Build
-        run: dart run build_runner build --delete-conflicting-outputs
+        run: |
+          if test -f "build.yaml"; then
+            dart run build_runner build --delete-conflicting-outputs
+          fi
 
       - name: Check format
         run: dart format --set-exit-if-changed .
