--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -51,11 +51,11 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
+      - name: Melos Activate
+        run: dart pub global activate melos
+
       - name: Build
-        run: |
-          if test -f "build.yaml"; then
-            dart run build_runner build --delete-conflicting-outputs
-          fi
+        run: melos build_runner
 
       - name: Check format
         run: dart format --set-exit-if-changed .
