--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -55,7 +55,7 @@ jobs:
         run: dart pub global activate melos
 
       - name: Build
-        run: melos build_runner
+        run: melos build
 
       - name: Check format
         run: dart format --set-exit-if-changed .
