--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,6 +7,11 @@ on:
        - 'packages/*/lib/**'
        - 'packages/*/test/**'
        - 'packages/*/pubspec.yaml'
+  push:
+    paths:
+       - 'packages/*/lib/**'
+       - 'packages/*/test/**'
+       - 'packages/*/pubspec.yaml'
   schedule:
     - cron: "0 10 * * *"
 
