--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,10 @@
 name: atproto_dart
 description: A sample command-line application.
 version: 1.0.0
+publish_to: none
 
 environment:
-  sdk: '>=2.19.5 <3.0.0'
+  sdk: ^3.0.0
 
 dependencies:
   github: ^9.12.0
