--- a/packages/atproto_annotation/pubspec.yaml
+++ b/packages/atproto_annotation/pubspec.yaml
@@ -1,7 +1,7 @@
 name: atproto_annotation
 description: >
-  Annotations for the atproto_generator.
-  This package does nothing without atproto_generator.
+  Annotations for the atproto_gen.
+  This package does nothing without atproto_gen.
 version: 0.0.1
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_annotation
@@ -17,9 +17,6 @@ topics:
   - bluesky
   - annotation
 
-dependencies:
-  atproto_core: ^0.6.3
-
 dev_dependencies:
   lints: ^2.0.1
   test: ^1.21.0
@@ -27,3 +24,5 @@ dev_dependencies:
 
 import_sorter:
   emojis: true
+dependencies:
+  atproto_core: ^0.6.3
