--- a/packages/atproto_test/pubspec_overrides.yaml
+++ b/packages/atproto_test/pubspec_overrides.yaml
@@ -1,5 +1,13 @@
 dependency_overrides:
+  at_identifier:
+    path: ../at_identifier
   nsid:
     path: ../nsid
+  at_uri:
+    path: ../at_uri
   xrpc:
     path: ../xrpc
+  multiformats:
+    path: ../multiformats
+  atproto_core:
+    path: ../atproto_core
