--- a/packages/nsid/pubspec.yaml
+++ b/packages/nsid/pubspec.yaml
@@ -1,5 +1,5 @@
 name: nsid
-description: Provide standard NSID object supported by AT Protocol to Dart/Flutter.
+description: Core library for parsing NSIDs in the AT Protocol standard.
 version: 0.3.0
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/nsid
