--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atproto_core
-description: This package provides core reusable and useful functionality for wrapping AT Protocol and related services.
-version: 0.7.0
+description: Core library for clients and tools. This package is mainly used by https://atprotodart.com packages.
+version: 0.7.1
 homepage: https://atprotodart.com
 documentation: https://atprotodart.com/docs/intro
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_core
@@ -18,12 +18,12 @@ topics:
   - core
 
 dependencies:
-  xrpc: ^0.4.1
-  at_uri: ^0.2.2
+  xrpc: ^0.4.2
+  at_uri: ^0.2.3
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   cbor: ^6.1.1
-  multiformats: ^0.2.1
+  multiformats: ^0.2.2
   universal_io: ^2.2.2
 
 dev_dependencies:
