--- a/packages/xrpc/pubspec.yaml
+++ b/packages/xrpc/pubspec.yaml
@@ -1,6 +1,6 @@
 name: xrpc
-description: Provide an HTTP client specialized for XRPC communication in AT Protocol.
-version: 0.4.1
+description: Core library for XRPC communication. This is a wrapped HTTP client for AT Protocol.
+version: 0.4.2
 homepage: https://atprotodart.com
 documentation: https://atprotodart.com/docs/intro
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/xrpc
@@ -19,7 +19,7 @@ topics:
 
 dependencies:
   http: ^1.1.0
-  nsid: ^0.2.1
+  nsid: ^0.3.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   mime: ^1.0.4
