--- a/packages/lexicon/pubspec.yaml
+++ b/packages/lexicon/pubspec.yaml
@@ -1,6 +1,6 @@
 name: lexicon
-description: AT Protocol standard Lexicon objects for Dart and Flutter.
-version: 0.1.3
+description: Core library for parsing Lexicon in the AT Protocol standard.
+version: 0.1.4
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/packages/lexicon
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -11,7 +11,7 @@ environment:
   sdk: ^3.0.0
 
 dependencies:
-  nsid: ^0.2.1
+  nsid: ^0.3.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
 
