--- a/packages/multiformats/pubspec.yaml
+++ b/packages/multiformats/pubspec.yaml
@@ -1,6 +1,6 @@
 name: multiformats
-description: Provide useful interfaces such a CID used by AT Protocol to Dart/Flutter.
-version: 0.2.1
+description: Core library for parsing IPFS-related things. This package is mainly used by https://atprotodart.com packages.
+version: 0.2.2
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/multiformats
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
