--- a/packages/at_identifier/pubspec.yaml
+++ b/packages/at_identifier/pubspec.yaml
@@ -1,6 +1,6 @@
 name: at_identifier
-description: Provide standard validation for identifier supported by AT Protocol to Dart/Flutter.
-version: 0.2.0
+description: Core library for the syntax in the AT Protocol standard.
+version: 0.2.1
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/at_identifier
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
