--- a/packages/did_plc/pubspec_overrides.yaml
+++ b/packages/did_plc/pubspec_overrides.yaml
@@ -7,5 +7,7 @@ dependency_overrides:
     path: ../at_uri
   xrpc:
     path: ../xrpc
+  multiformats:
+    path: ../multiformats
   atproto_core:
     path: ../atproto_core
