--- a/packages/lex_annotation/pubspec.yaml
+++ b/packages/lex_annotation/pubspec.yaml
@@ -1,10 +1,10 @@
-name: atproto_annotation
+name: lex_annotation
 description: >
-  Annotations for the atproto_gen.
-  This package does nothing without atproto_gen.
+  Annotations for the lex_gen.
+  This package does nothing without lex_gen.
 version: 0.0.1
 homepage: https://atprotodart.com
-repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_annotation
+repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/lex_annotation
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
 funding:
   - https://github.com/sponsors/myConsciousness
