--- a/packages/bluesky/pubspec_overrides.yaml
+++ b/packages/bluesky/pubspec_overrides.yaml
@@ -9,6 +9,8 @@ dependency_overrides:
     path: ../xrpc
   multiformats:
     path: ../multiformats
+  lex_annotation:
+    path: ../lex_annotation
   atproto_core:
     path: ../atproto_core
   atproto:
