--- a/packages/atproto_test/pubspec.yaml
+++ b/packages/atproto_test/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
 
 dependencies:
   test: ^1.21.0
-  atproto_core: ^0.9.0
+  atproto_core: ^0.10.0-preview.0
   http: ^1.1.0
   universal_io: ^2.2.2
 
