--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
-  "dependencies": {   
+  "dependencies": {
     "@docusaurus/core": "^2.4.1",
     "@docusaurus/plugin-ideal-image": "^2.4.1",
     "@docusaurus/preset-classic": "^2.4.1",
@@ -21,8 +21,8 @@
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.11.8",
     "clsx": "^1.2.1",
-    "docusaurus-plugin-sass": "^0.2.3",    
-    "@mdx-js/react": "^1.6.22",
+    "cytoscape": "^3.28.1",
+    "docusaurus-plugin-sass": "^0.2.3",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
