--- a/melos.yaml
+++ b/melos.yaml
@@ -29,12 +29,10 @@ scripts:
       Run `dart analyze` in all packages.
        - Note: you can also rely on your IDEs Dart Analysis / Issues window.
 
-  format:
+  fmt:
     run: |
-      melos exec -c 20 -- \
-        dart format .
-      melos exec --depends-on="import_sorter" -c 20 -- \
-        dart run import_sorter:main
+      melos exec -c 20 -- dart format .
+      melos exec --depends-on="import_sorter" -c 20 -- dart run import_sorter:main
     description: Run `dart format` and `dart run import_sorter:main` in all packages.
 
   build:
