--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -29,6 +29,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
   freezed: ^2.4.7
   import_sorter: ^4.6.0
+  bluesky_text: ^0.6.9
 
   atproto_test:
     path: ../atproto_test
