--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   atproto: ^0.11.11
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  characters: ^1.3.0
 
 dev_dependencies:
   lints: ^2.0.1
