--- a/packages/atproto/pubspec.yaml
+++ b/packages/atproto/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atproto
 description: The most famous and powerful Dart/Flutter library for AT Protocol.
-version: 0.12.5
+version: 1.0.0-0.0.dev
 homepage: https://atprotodart.com
 documentation: https://atprotodart.com/docs/packages/atproto
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto
@@ -17,7 +17,7 @@ topics:
   - api
 
 dependencies:
-  atproto_core: ^0.10.4
+  atproto_core: ^1.0.0-0.0.dev
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
 
