--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -1,6 +1,6 @@
 name: bluesky
 description: The most famous and powerful Dart/Flutter library for Bluesky Social.
-version: 0.16.9
+version: 1.0.0-0.0.dev
 homepage: https://atprotodart.com
 documentation: https://atprotodart.com/docs/packages/bluesky
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/bluesky
@@ -17,8 +17,8 @@ topics:
   - api
 
 dependencies:
-  atproto_core: ^0.10.4
-  atproto: ^0.12.5
+  atproto_core: ^1.0.0-0.0.dev
+  atproto: ^1.0.0-0.0.dev
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   characters: ^1.3.0
