--- a/packages/atproto/pubspec.yaml
+++ b/packages/atproto/pubspec.yaml
@@ -17,7 +17,7 @@ topics:
   - api
 
 dependencies:
-  atproto_core: ^1.0.0-0.0.dev
+  atproto_core: ^0.10.4
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
 
