--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -17,8 +17,8 @@ topics:
   - api
 
 dependencies:
+  atproto_core: ^1.0.0-preview.0
   atproto: ^1.0.0-0.0.dev
-  atproto_core: ^0.10.5
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   characters: ^1.3.0
