--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -1,6 +1,6 @@
 name: bluesky
 description: The most famous and powerful Dart/Flutter library for Bluesky Social.
-version: 0.16.12
+version: 0.16.13
 homepage: https://atprotodart.com
 documentation: https://atprotodart.com/docs/packages/bluesky
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/bluesky
@@ -17,11 +17,12 @@ topics:
   - api
 
 dependencies:
-  atproto_core: ^0.10.5
-  atproto: ^0.12.7
+  atproto_core: ^0.10.6
+  atproto: ^0.12.8
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   characters: ^1.3.0
+  nanoid: ^1.0.0
 
 dev_dependencies:
   lints: ^2.0.1
