--- a/packages/atproto/pubspec_overrides.yaml
+++ b/packages/atproto/pubspec_overrides.yaml
@@ -11,5 +11,7 @@ dependency_overrides:
     path: ../multiformats
   lex_annotation:
     path: ../lex_annotation
+  atproto_oauth:
+    path: ../atproto_oauth
   atproto_core:
     path: ../atproto_core
