--- a/packages/bluesky_cards/example/pubspec_overrides.yaml
+++ b/packages/bluesky_cards/example/pubspec_overrides.yaml
@@ -13,6 +13,8 @@ dependency_overrides:
     path: ../../lexicon
   lex_annotation:
     path: ../../lex_annotation
+  atproto_oauth:
+    path: ../../atproto_oauth
   atproto_core:
     path: ../../atproto_core
   atproto_test:
