--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atproto_core
 description: Core library for clients and tools. This package is mainly used by https://atprotodart.com packages.
-version: 0.10.6
+version: 0.11.0
 homepage: https://atprotodart.com
 documentation: https://atprotodart.com/docs/intro
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_core
@@ -18,13 +18,14 @@ topics:
   - core
 
 dependencies:
-  xrpc: ^0.5.3
+  xrpc: ^0.6.0
   at_uri: ^0.4.0
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   cbor: ^6.2.0
   multiformats: ^0.2.3
   universal_io: ^2.2.2
+  atproto_oauth: ^0.0.1
 
 dev_dependencies:
   lints: ^2.0.1
