--- a/packages/did_plc/pubspec_overrides.yaml
+++ b/packages/did_plc/pubspec_overrides.yaml
@@ -9,5 +9,7 @@ dependency_overrides:
     path: ../xrpc
   multiformats:
     path: ../multiformats
+  atproto_oauth:
+    path: ../atproto_oauth
   atproto_core:
     path: ../atproto_core
