--- a/.github/workflows/pull_latest_lexicons.yml
+++ b/.github/workflows/pull_latest_lexicons.yml
@@ -3,7 +3,7 @@ name: Pull Latest Lexicons
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */3 * * *"
+    - cron: "0 18 * * *"
 
 jobs:
   pull-lexicons:
