--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,13 @@ publish_to: none
 environment:
   sdk: ^3.8.0
 
-workspace:
-  - packages/lexicon
-
 dependencies:
   github: ^9.12.0
   http: ^1.4.0
   pubspec: ^2.3.0
   test: ^1.26.2
+  lexicon:
+    path: packages/lexicon
 
 dev_dependencies:
   lints: ^6.0.0
