--- a/.github/workflows/sync_lexicons.yml
+++ b/.github/workflows/sync_lexicons.yml
@@ -1,4 +1,4 @@
-name: Update Lexicons
+name: Sync Lexicons
 
 on:
   workflow_dispatch:
@@ -17,45 +17,33 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git fetch origin
-          if git show-ref --quiet refs/remotes/origin/pull-latest-lexicons; then
-            git push origin --delete pull-latest-lexicons
+          if git show-ref --quiet refs/remotes/origin/chore-sync-lexicons; then
+            git push origin --delete chore-sync-lexicons
           fi
 
       - name: Create New Branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git switch -c pull-latest-lexicons
-          git push -u origin pull-latest-lexicons
+          git switch -c chore-sync-lexicons
+          git push -u origin chore-sync-lexicons
 
       - uses: dart-lang/setup-dart@v1.3
+
       - name: Install dependencies
         run: dart pub get
 
-      - name: Pull Latest Lexicons
+      - name: Sync Lexicons
         run: dart run ./bin/pull_latest_lexicons.dart
         env:
           GITHUB_TOKEN: ${{ secrets.PAT }}
 
-      - name: Generate
-        run: |
-          dart run ./bin/generate_lexicon_ids.dart
-          dart run ./bin/generate_lexicon_matrix.dart
-          dart run ./bin/generate_supported_api_matrix.dart
-          dart run ./bin/generate_lexicon_docs.dart
-
-      - name: Format
-        run: |
-          dart format packages/lexicon
-          dart format packages/atproto
-          dart format packages/bluesky
-
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          commit-message: "[Scheduled] Pull Latest Lexicons"
-          title: "[Scheduled] Pull Latest Lexicons"
-          branch: pull-latest-lexicons
+          commit-message: "chore: Sync Lexicon Data"
+          title: "chore: Sync Lexicon Data"
+          branch: chore-sync-lexicons
           base: main
           labels: Github Actions
           assignees: "${{ github.actor }}"
