fix: fix workflow

--- a/.github/workflows/generate_codes.yml
+++ b/.github/workflows/generate_codes.yml
@@ -64,7 +64,7 @@ jobs:
           dart fix --apply
           dart run import_sorter:main
           dart format .
-          cd ../packages/atproto
+          cd ../../packages/atproto
           dart fix --apply
           dart run import_sorter:main
           dart format .
