chore: move to lex_gen package

--- a/.github/workflows/generate_codes.yml
+++ b/.github/workflows/generate_codes.yml
@@ -44,11 +44,11 @@ jobs:
 
       - name: Generate
         run: |
-          dart run ./bin/generate_lexicon_docs.dart
-          dart run ./bin/generate_lexicon_ids.dart
-          dart run ./bin/generate_lexicon_matrix.dart
-          dart run ./bin/generate_supported_api_matrix.dart
-          dart run ./bin/gen/code_gen.dart
+          dart run ./bin/gen_lexicon_docs.dart
+          dart run ./bin/gen_lexicon_ids.dart
+          dart run ./bin/gen_lexicon_matrix.dart
+          dart run ./bin/gen_supported_api_matrix.dart
+          dart run ./bin/gen_codes.dart
 
       - name: Build
         run: |
