--- a/pubspec_overrides.yaml
+++ b/pubspec_overrides.yaml
@@ -1,5 +1,5 @@
 dependency_overrides:
   at_identifier:
-    path: ../nsid
+    path: packages/nsid
   nsid:
-    path: ../lexicon
+    path: packages/lexicon
