--- a/pubspec_overrides.yaml
+++ b/pubspec_overrides.yaml
@@ -1,5 +1,5 @@
 dependency_overrides:
-  at_identifier:
-    path: packages/nsid
   nsid:
+    path: packages/nsid
+  lexicon:
     path: packages/lexicon
