--- a/.github/workflows/generate_codes.yml
+++ b/.github/workflows/generate_codes.yml
@@ -43,6 +43,8 @@ jobs:
           dart pub get
           cd ../../packages/bluesky
           dart pub get
+          cd ../../packages/bluesky_cli
+          dart pub get
           cd ../../
 
       - name: Generate
@@ -72,6 +74,10 @@ jobs:
           dart run import_sorter:main
           dart format .
           cd ../../packages/bluesky
+          dart fix --apply
+          dart run import_sorter:main
+          dart format .
+          cd ../../packages/bluesky_cli
           dart fix --apply
           dart run import_sorter:main
           dart format .
