--- a/packages/bluesky_text/pubspec.yaml
+++ b/packages/bluesky_text/pubspec.yaml
@@ -16,7 +16,7 @@ topics:
   - util
 
 dependencies:
-  xrpc: ^1.0.1
+  xrpc: ^1.0.1-legacy
   characters: ^1.4.1
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
