--- a/packages/atproto/pubspec.yaml
+++ b/packages/atproto/pubspec.yaml
@@ -17,7 +17,7 @@ topics:
   - api
 
 dependencies:
-  atproto_core: ^1.0.1
+  atproto_core: ^1.0.1-legacy
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
 
