--- a/packages/atproto_oauth/pubspec.yaml
+++ b/packages/atproto_oauth/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atproto_oauth
 description: Provides tools to handle OAuth for AT Protocol and Bluesky Social.
-version: 0.1.1
+version: 0.1.1-legacy
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_oauth
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
