--- a/packages/bluesky/pubspec.yaml
+++ b/packages/bluesky/pubspec.yaml
@@ -17,8 +17,8 @@ topics:
   - api
 
 dependencies:
-  atproto_core: ^1.0.1
-  atproto: ^1.0.1
+  atproto_core: ^1.0.1-legacy
+  atproto: ^1.0.1-legacy
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   characters: ^1.4.1
