--- a/packages/lexicon/pubspec.yaml
+++ b/packages/lexicon/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
-  nsid: ^1.0.1
+  nsid: ^1.0.1-legacy
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
 
