--- a/packages/atproto_test/pubspec.yaml
+++ b/packages/atproto_test/pubspec.yaml
@@ -3,7 +3,7 @@ description: This package provides core reusable and useful functionality for te
 version: 1.0.0
 publish_to: none
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
   test: ^1.26.2
