--- a/packages/at_identifier/pubspec.yaml
+++ b/packages/at_identifier/pubspec.yaml
@@ -1,6 +1,6 @@
 name: at_identifier
 description: Core library for the syntax in the AT Protocol standard.
-version: 1.0.1
+version: 1.0.2
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/at_identifier
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -8,7 +8,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 topics:
   - atproto
