--- a/packages/at_uri/pubspec.yaml
+++ b/packages/at_uri/pubspec.yaml
@@ -1,6 +1,6 @@
 name: at_uri
 description: Core library for parsing AT URI in the AT Protocol standard.
-version: 1.0.1
+version: 1.0.2
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/at_uri
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -8,7 +8,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 topics:
   - atproto
@@ -17,8 +17,8 @@ topics:
   - util
 
 dependencies:
-  at_identifier: ^1.0.1
-  nsid: ^1.0.1
+  at_identifier: ^1.0.2
+  nsid: ^1.0.2
 
 dev_dependencies:
   lints: ^6.0.0
