--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -1,6 +1,6 @@
 name: atproto_core
 description: Core library for clients and tools. This package is mainly used by https://atprotodart.com packages.
-version: 1.0.1
+version: 1.0.2
 homepage: https://atprotodart.com
 documentation: https://atprotodart.com/docs/intro
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/atproto_core
@@ -9,7 +9,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 topics:
   - atproto
@@ -18,14 +18,14 @@ topics:
   - core
 
 dependencies:
-  xrpc: ^1.0.1
-  at_uri: ^1.0.1
+  xrpc: ^1.0.2
+  at_uri: ^1.0.2
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   cbor: ^6.3.7
-  multiformats: ^1.0.1
+  multiformats: ^1.0.2
   universal_io: ^2.2.2
-  atproto_oauth: ^0.1.1
+  atproto_oauth: ^0.1.2
 
 dev_dependencies:
   lints: ^6.0.0
