--- a/packages/bluesky_cli/pubspec.yaml
+++ b/packages/bluesky_cli/pubspec.yaml
@@ -8,7 +8,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 executables:
   bsky:
@@ -20,13 +20,13 @@ topics:
   - cli
 
 dependencies:
-  xrpc: ^1.0.1
-  at_uri: ^1.0.1
+  xrpc: ^1.0.2
+  at_uri: ^1.0.2
   ansi_styles: ^0.3.1
   args: ^2.7.0
   cli_launcher: ^0.3.1
   cli_util: ^0.4.2
-  bluesky_text: ^1.0.1
+  bluesky_text: ^1.0.2
 
 dev_dependencies:
   lints: ^6.0.0
