--- a/packages/bluesky_text/pubspec.yaml
+++ b/packages/bluesky_text/pubspec.yaml
@@ -1,6 +1,6 @@
 name: bluesky_text
 description: Provides the easiest and most powerful way to analyze the text for Bluesky Social.
-version: 1.0.1
+version: 1.0.2
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/bluesky_text
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -8,7 +8,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 topics:
   - atproto
@@ -16,7 +16,7 @@ topics:
   - util
 
 dependencies:
-  xrpc: ^1.0.1
+  xrpc: ^1.0.2
   characters: ^1.4.1
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
