--- a/packages/did_plc/pubspec.yaml
+++ b/packages/did_plc/pubspec.yaml
@@ -8,7 +8,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 topics:
   - atproto
@@ -16,7 +16,7 @@ topics:
   - plc
 
 dependencies:
-  atproto_core: ^0.11.0
+  atproto_core: ^1.0.2
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
 
