--- a/packages/lex_annotation/pubspec.yaml
+++ b/packages/lex_annotation/pubspec.yaml
@@ -10,7 +10,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 topics:
   - atproto
