--- a/packages/lexicon/pubspec.yaml
+++ b/packages/lexicon/pubspec.yaml
@@ -1,6 +1,6 @@
 name: lexicon
 description: Core library for parsing Lexicon in the AT Protocol standard.
-version: 1.0.1
+version: 1.0.2
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/packages/lexicon
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -8,10 +8,10 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
-  nsid: ^1.0.1
+  nsid: ^1.0.2
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
 
