--- a/packages/multiformats/pubspec.yaml
+++ b/packages/multiformats/pubspec.yaml
@@ -1,6 +1,6 @@
 name: multiformats
 description: Core library for parsing IPFS-related things. This package is mainly used by https://atprotodart.com packages.
-version: 1.0.1
+version: 1.0.2
 homepage: https://atprotodart.com
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/multiformats
 issue_tracker: https://github.com/myConsciousness/atproto.dart/issues
@@ -8,7 +8,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 topics:
   - ipfs
