--- a/packages/xrpc/pubspec.yaml
+++ b/packages/xrpc/pubspec.yaml
@@ -1,6 +1,6 @@
 name: xrpc
 description: Core library for XRPC communication. This is a wrapped HTTP client for AT Protocol.
-version: 1.0.1
+version: 1.0.2
 homepage: https://atprotodart.com
 documentation: https://atprotodart.com/docs/intro
 repository: https://github.com/myConsciousness/atproto.dart/tree/main/packages/xrpc
@@ -9,7 +9,7 @@ funding:
   - https://github.com/sponsors/myConsciousness
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.8.0 <4.0.0"
 
 topics:
   - atproto
@@ -19,7 +19,7 @@ topics:
 
 dependencies:
   http: ^1.4.0
-  nsid: ^1.0.1
+  nsid: ^1.0.2
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   mime: ^2.0.0
