--- a/melos.yaml
+++ b/melos.yaml
@@ -44,7 +44,7 @@ scripts:
     description: Run `dart run build_runner build` in all packages.
 
   test:
-    run: melos exec  -c 20 --fail-fast -- "\$MELOS_ROOT_PATH/scripts/coverage.sh"
+    run: melos exec --fail-fast -- "\$MELOS_ROOT_PATH/.github/scripts/coverage.sh"
     description: Run all Dart tests in this project.
     flutter: false
     dir-exists: test
