feat: migrate from Melos to Dart pub workspaces
- Remove melos.yaml configuration file
- Add workspace configuration to root pubspec.yaml
- Add 'resolution: workspace' to all package pubspec.yaml files
- Remove all pubspec_overrides.yaml files from packages
- Update build scripts to work with pub workspaces
- Remove codecov.yaml (no longer needed)
- Update coverage script to remove melos-specific commands

This migration simplifies dependency management by using Dart's native
pub workspaces feature instead of the external Melos tool.

--- a/packages/atproto_oauth/pubspec.yaml
+++ b/packages/atproto_oauth/pubspec.yaml
@@ -10,6 +10,8 @@ funding:
 environment:
   sdk: ">=3.8.0 <4.0.0"
 
+resolution: workspace
+
 topics:
   - atproto
   - bluesky
@@ -24,7 +26,7 @@ dependencies:
   convert: ^3.1.2
 
 dev_dependencies:
-  lints: ^4.0.0
+  lints: ^6.0.0
   test: ^1.24.0
   build_runner: ^2.5.4
   json_serializable: ^6.9.5
