--- a/packages/atproto_test/pubspec.yaml
+++ b/packages/atproto_test/pubspec.yaml
@@ -5,9 +5,11 @@ publish_to: none
 environment:
   sdk: ">=3.8.0 <4.0.0"
 
+resolution: workspace
+
 dependencies:
   test: ^1.26.2
-  atproto_core: ^0.11.0
+  atproto_core: ^1.0.6
   http: ^1.4.0
   universal_io: ^2.2.2
 
