--- a/packages/lexicon/pubspec.yaml
+++ b/packages/lexicon/pubspec.yaml
@@ -10,6 +10,8 @@ funding:
 environment:
   sdk: ">=3.8.0 <4.0.0"
 
+resolution: workspace
+
 dependencies:
   nsid: ^1.0.2
   freezed_annotation: ^3.1.0
