chore: cleanup unused files and optimize test configuration
- Remove unused scripts and files:
  - Delete .github/scripts/check-release.sh (not referenced anywhere)
  - Delete .github/scripts/coverage.sh (replaced with direct dart test)
  - Remove entire .github/scripts directory
  - Delete codecov.yaml (coverage reporting not used)
  - Remove empty test files and directories

- Optimize test configuration:
  - Simplify test execution by removing coverage generation
  - Update GitHub workflow to use direct 'dart test' instead of script
  - Update melos.yaml to exclude packages without tests
  - Remove empty test directory from packages/lex_gen
  - Remove empty test file from packages/atproto_oauth

- Benefits:
  - Faster test execution (no coverage overhead)
  - Cleaner project structure
  - Eliminates 'No tests were found' errors
  - Reduces maintenance burden

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,8 +57,8 @@ jobs:
         run: |
           if test -d "test"; then
             if grep -q flutter "pubspec.yaml"; then
-              flutter test --coverage
+              flutter test
             else
-              ${{github.workspace}}/.github/scripts/coverage.sh
+              dart test
             fi
           fi
