--- a/packages/lex_gen/pubspec_overrides.yaml
+++ b/packages/lex_gen/pubspec_overrides.yaml
@@ -1,7 +1,5 @@
 dependency_overrides:
-  at_identifier:
-    path: ../at_identifier
-  nsid:
-    path: ../nsid
+  at_primitives:
+    path: ../at_primitives
   lexicon:
     path: ../lexicon
