--- a/packages/atproto/pubspec_overrides.yaml
+++ b/packages/atproto/pubspec_overrides.yaml
@@ -1,11 +1,7 @@
 # melos_managed_dependency_overrides: atproto_test
 dependency_overrides:
-  at_identifier:
-    path: ../at_identifier
-  nsid:
-    path: ../nsid
-  at_uri:
-    path: ../at_uri
+  at_primitives:
+    path: ../at_primitives
   xrpc:
     path: ../xrpc
   multiformats:
