--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -19,7 +19,7 @@ topics:
 
 dependencies:
   xrpc: ^1.0.2
-  at_uri: ^1.0.2
+  at_primitives: ^1.0.0
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   cbor: ^6.3.7
