--- a/packages/bluesky_cli/pubspec.yaml
+++ b/packages/bluesky_cli/pubspec.yaml
@@ -21,7 +21,7 @@ topics:
 
 dependencies:
   xrpc: ^1.0.2
-  at_uri: ^1.0.2
+  at_primitives: ^1.0.0
   ansi_styles: ^0.3.1
   args: ^2.7.0
   cli_launcher: ^0.3.1
