--- a/website/pubspec_overrides.yaml
+++ b/website/pubspec_overrides.yaml
@@ -1,10 +1,6 @@
 dependency_overrides:
-  at_identifier:
-    path: ../packages/at_identifier
-  nsid:
-    path: ../packages/nsid
-  at_uri:
-    path: ../packages/at_uri
+  at_primitives:
+    path: ../packages/at_primitives
   xrpc:
     path: ../packages/xrpc
   multiformats:
