refactor: rename bin directory to scripts
- Rename bin/ directory to scripts/ for better semantic clarity
- Update all references in melos.yaml, GitHub workflows, and configuration files
- Scripts contain development automation tasks rather than end-user tools
- Update config paths and usage documentation accordingly

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -61,6 +61,6 @@ ci:
 
 # Build and development tools
 build:
-- bin/**/*
+- scripts/**/*
 - packages/*/pubspec.yaml
 - packages/*/analysis_options.yaml
