fix: update remaining bin path references in configuration
- Update binPath configuration from 'bin' to 'scripts' in all config files
- Update cache directory from bin_cache to scripts_cache
- Fix ConfigurationException caused by missing bin directory validation

--- a/scripts/config/script_config.json
+++ b/scripts/config/script_config.json
@@ -2,7 +2,7 @@
   "lexiconsPath": "lexicons",
   "packagesPath": "packages",
   "websitePath": "website",
-  "binPath": "bin",
+  "binPath": "scripts",
   "packageMappings": {
     "atproto": "packages/atproto",
     "atproto_core": "packages/atproto_core",
@@ -32,5 +32,5 @@
   },
   "maxParallelOperations": 4,
   "enableCaching": true,
-  "cacheDirectory": ".dart_tool/bin_cache"
+  "cacheDirectory": ".dart_tool/scripts_cache"
 }
