feat(did_plc): v1.0.0 - Independent high-performance DID PLC implementation
- Complete rewrite with zero atproto dependencies
- High-performance HTTP client with connection pooling
- Intelligent caching with TTL and LRU eviction
- Batch processing for multiple DIDs
- Streaming support for large datasets with backpressure control
- Enhanced error handling with specific exception types
- Cryptographic utilities for PLC operations
- Operation builders with fluent API
- Comprehensive validation with field-level errors
- Configurable retry policies with exponential backoff
- Performance monitoring and metrics
- Resource management with automatic cleanup
- 100% test coverage with performance validation
- Complete documentation and examples
- Website integration with features showcase

BREAKING CHANGES:
- Remove atproto_core and atproto_test dependencies
- New import structure: single import covers all functionality
- No session required for PLC directory access
- Immutable data types using freezed
- Enhanced error handling with specific exception types

--- a/website/pubspec_overrides.yaml
+++ b/website/pubspec_overrides.yaml
@@ -5,6 +5,8 @@ dependency_overrides:
     path: ../packages/xrpc
   multiformats:
     path: ../packages/multiformats
+  did_plc:
+    path: ../packages/did_plc
   atproto_core:
     path: ../packages/atproto_core
   atproto:
