--- a/website/pubspec.yaml
+++ b/website/pubspec.yaml
@@ -4,6 +4,8 @@ environment:
   sdk: ">=3.8.0 <4.0.0"
 
 dependencies:
+  did_plc:
+    path: ../packages/did_plc
   bluesky:
     path: ../packages/bluesky
   bluesky_text:
