chore: replace import_sorter with git dependency
- Update import_sorter dependency from ^4.6.0 to git repository across all packages
- Replace version constraint with git reference to https://github.com/myConsciousness/import_sorter.git
- Update pubspec.yaml files in 14 packages: at_primitives, atproto, atproto_core, atproto_oauth, atproto_test, bluesky, bluesky_cli, bluesky_text, did_plc, lex_gen, lexicon, multiformats, xrpc, and root pubspec.yaml
- This allows using the latest development version from the git repository instead of the published pub.dev version

--- a/packages/atproto_core/pubspec.yaml
+++ b/packages/atproto_core/pubspec.yaml
@@ -32,7 +32,8 @@ dev_dependencies:
   build_runner: ^2.5.4
   json_serializable: ^6.9.5
   freezed: ^3.2.0
-  import_sorter: ^4.6.0
+  import_sorter:
+    git: https://github.com/myConsciousness/import_sorter.git
 
   atproto_test:
     path: ../atproto_test
