chore(melos): simplify configuration and import_sorter invocation
- Remove bootstrap configuration with usePubspecOverrides from melos.yaml
- Update import_sorter command invocation from `dart run import_sorter:main` to `dart run import_sorter`
- Simplify melos configuration by removing unnecessary bootstrap settings
- Streamline the fmt script to use the shorter import_sorter command syntax

--- a/melos.yaml
+++ b/melos.yaml
@@ -1,9 +1,5 @@
 name: atproto
 
-command:
-  bootstrap:
-    usePubspecOverrides: true
-
 packages:
   - website/**
   - packages/**
@@ -31,7 +27,7 @@ scripts:
 
   fmt:
     run: |
-      melos exec --depends-on="import_sorter" -c 20 -- dart run import_sorter:main
+      melos exec --depends-on="import_sorter" -c 20 -- dart run import_sorter
       melos exec -c 20 -- dart format .
     description: Run `dart format` and `dart run import_sorter:main` in all packages.
 
