chore: migrate to Pub workspaces and update dependencies
- Add `resolution: workspace` to all package pubspec.yaml files
- Update import_sorter git dependency to use structured format with ref pointing to fix/monorepo-pub-workspaces branch
- Remove all pubspec_overrides.yaml files across packages as they are no longer needed with workspace resolution
- Update atproto_test dependency constraint from ^0.11.0 to ^1.0.0
- Update bluesky_text dependency constraint from ^0.6.9 to ^1.0.0
- Update lints dependency in atproto_oauth from ^4.0.0 to ^6.0.0
- Remove root-level pubspec_overrides.yaml file
- Consolidate dependency management through Pub workspaces instead of individual override files

--- a/packages/at_primitives/pubspec.yaml
+++ b/packages/at_primitives/pubspec.yaml
@@ -1,4 +1,5 @@
 name: at_primitives
+resolution: workspace
 description: Primitive types and utilities for AT Protocol. This package provides basic data structures and utilities used across AT Protocol implementations.
 version: 1.0.0
 homepage: https://atprotodart.com
@@ -28,4 +29,6 @@ dev_dependencies:
   json_serializable: ^6.9.5
   freezed: ^3.2.0
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
