--- a/packages/atproto/pubspec.yaml
+++ b/packages/atproto/pubspec.yaml
@@ -1,4 +1,5 @@
 name: atproto
+resolution: workspace
 description: The most famous and powerful Dart/Flutter library for AT Protocol.
 version: 1.2.4
 homepage: https://atprotodart.com
@@ -28,7 +29,9 @@ dev_dependencies:
   json_serializable: ^6.9.5
   freezed: ^3.2.0
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
 
   atproto_test:
     path: ../atproto_test
