--- a/packages/atproto_oauth/pubspec.yaml
+++ b/packages/atproto_oauth/pubspec.yaml
@@ -1,4 +1,5 @@
 name: atproto_oauth
+resolution: workspace
 description: Provides tools to handle OAuth for AT Protocol and Bluesky Social.
 version: 0.1.2
 homepage: https://atprotodart.com
@@ -24,10 +25,12 @@ dependencies:
   convert: ^3.1.2
 
 dev_dependencies:
-  lints: ^4.0.0
+  lints: ^6.0.0
   test: ^1.24.0
   build_runner: ^2.5.4
   json_serializable: ^6.9.5
   freezed: ^3.2.0
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
