--- a/packages/atproto_test/pubspec.yaml
+++ b/packages/atproto_test/pubspec.yaml
@@ -1,4 +1,5 @@
 name: atproto_test
+resolution: workspace
 description: This package provides core reusable and useful functionality for testing atproto based packages.
 version: 1.0.0
 publish_to: none
@@ -7,11 +8,13 @@ environment:
 
 dependencies:
   test: ^1.26.2
-  atproto_core: ^0.11.0
+  atproto_core: ^1.0.0
   http: ^1.4.0
   universal_io: ^2.2.2
 
 dev_dependencies:
   lints: ^6.0.0
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
