--- a/packages/bluesky_cli/pubspec.yaml
+++ b/packages/bluesky_cli/pubspec.yaml
@@ -1,4 +1,5 @@
 name: bluesky_cli
+resolution: workspace
 description: A powerful CLI tool that allows Bluesky Social's APIs to be executed from the command line powered by Dart language.
 version: 0.4.7
 homepage: https://atprotodart.com
@@ -32,4 +33,6 @@ dev_dependencies:
   lints: ^6.0.0
   test: ^1.26.2
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
