--- a/packages/bluesky_text/pubspec.yaml
+++ b/packages/bluesky_text/pubspec.yaml
@@ -1,4 +1,5 @@
 name: bluesky_text
+resolution: workspace
 description: Provides the easiest and most powerful way to analyze the text for Bluesky Social.
 version: 1.1.1
 homepage: https://atprotodart.com
@@ -28,5 +29,7 @@ dev_dependencies:
   json_serializable: ^6.9.5
   freezed: ^3.2.0
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
   bluesky: ^1.0.4
