--- a/packages/did_plc/pubspec.yaml
+++ b/packages/did_plc/pubspec.yaml
@@ -1,4 +1,5 @@
 name: did_plc
+resolution: workspace
 description: High-performance, independent DID PLC Directory client with caching, streaming, and batch processing for Dart/Flutter applications.
 version: 1.0.3
 homepage: https://atprotodart.com
@@ -24,10 +25,12 @@ dependencies:
   json_annotation: ^4.9.0
 
 dev_dependencies:
-  lints: ^2.0.0
+  lints: ^6.0.0
   test: ^1.26.2
   build_runner: ^2.5.4
   json_serializable: ^6.9.5
   freezed: ^3.2.0
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
