--- a/packages/lex_gen/pubspec.yaml
+++ b/packages/lex_gen/pubspec.yaml
@@ -1,4 +1,5 @@
 name: lex_gen
+resolution: workspace
 publish_to: none
 
 environment:
@@ -11,4 +12,6 @@ dev_dependencies:
   lints: ^6.0.0
   test: ^1.26.2
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
