--- a/packages/lexicon/pubspec.yaml
+++ b/packages/lexicon/pubspec.yaml
@@ -1,4 +1,5 @@
 name: lexicon
+resolution: workspace
 description: Core library for parsing Lexicon in the AT Protocol standard.
 version: 1.0.3
 homepage: https://atprotodart.com
@@ -22,4 +23,6 @@ dev_dependencies:
   json_serializable: ^6.9.5
   freezed: ^3.2.0
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
