--- a/packages/multiformats/pubspec.yaml
+++ b/packages/multiformats/pubspec.yaml
@@ -1,4 +1,5 @@
 name: multiformats
+resolution: workspace
 description: Core library for parsing IPFS-related things. This package is mainly used by https://atprotodart.com packages.
 version: 1.0.2
 homepage: https://atprotodart.com
@@ -25,4 +26,6 @@ dev_dependencies:
   lints: ^6.0.0
   test: ^1.26.2
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
