--- a/packages/xrpc/pubspec.yaml
+++ b/packages/xrpc/pubspec.yaml
@@ -1,4 +1,5 @@
 name: xrpc
+resolution: workspace
 description: Core library for XRPC communication. This is a wrapped HTTP client for AT Protocol.
 version: 1.0.3
 homepage: https://atprotodart.com
@@ -32,4 +33,6 @@ dev_dependencies:
   json_serializable: ^6.9.5
   freezed: ^3.2.0
   import_sorter:
-    git: https://github.com/myConsciousness/import_sorter.git
+    git:
+      url: https://github.com/myConsciousness/import_sorter.git
+      ref: fix/monorepo-pub-workspaces
